--- a/Demo/css/main.css
+++ b/Demo/css/main.css
@@ -9,10 +9,6 @@
 	General Styles
 	========================================================================== */
 
-* {
-	box-sizing: border-box;
-}
-
 body {
 	background-color: #f5f5f5;
 	font-family: 'Rubik', 'Helvetica Neue', 'Helvetica', sans-serif;
@@ -143,9 +139,14 @@ h6 {
 
 .header__nav a {
 	padding: 0 .5em;
+	margin-left: 1em;
 	text-transform: uppercase;
 	letter-spacing: 0.02em;
 	font-size: .9em;
+}
+
+.header__nav a.is-active {
+	color: #999;
 }
 
 
