--- a/Demos/Basic/css/main.css
+++ b/Demos/Basic/css/main.css
@@ -43,12 +43,12 @@ h3,
 h4,
 h5,
 h6 {
-	line-height: 1.75em;
+	line-height: 1.6;
 	font-weight: 500;
 }
 
 .container {
-	max-width: 64em;
+	max-width: 64em; /*1024px */
 	margin: 0 auto;
 	padding: 0 1em;
 }
@@ -59,7 +59,7 @@ h6 {
 
 .text-meta {
 	margin: 0;
-	font-size: .825em;
+	font-size: .875em;
 	text-transform: uppercase;
 	letter-spacing: .01em;
 	color: #999;
@@ -88,7 +88,7 @@ h6 {
 	border-radius: .2em;
 	transition: background-color .3s ease-in-out;
 	text-transform: uppercase;
-	font-size: .825em;
+	font-size: .875em;
 	letter-spacing: .1em;
 }
 
@@ -119,6 +119,7 @@ h6 {
 .slat__title {
 	margin: 0;
 }
+
 
 /* ==========================================================================
 	Header / Navigation Styles
