--- a/Demos/Gulp+Sass/src/sass/base/_base.scss
+++ b/Demos/Gulp+Sass/src/sass/base/_base.scss
@@ -1,8 +1,9 @@
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
+/* ==========================================================================
+	Custom Web fonts
+	========================================================================== */
+
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,500');
+
 
 /* ==========================================================================
    Base styles: opinionated defaults
@@ -83,6 +84,45 @@ fieldset {
 
 textarea {
 	resize: vertical;
+}
+
+
+body {
+	background-color: #f5f5f5;
+	font-family: 'Rubik', 'Helvetica Neue', 'Helvetica', sans-serif;
+	font-weight: 300;
+	color: #332929;
+}
+
+a {
+	text-decoration: none;
+	color: #ff5252;
+	transition: color .3s ease-in-out;
+}
+
+a:hover,
+a:focus {
+	color: #cc4141;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	line-height: 1.75em;
+	font-weight: 500;
 }
 
 
