--- a/Demos/Gulp+Sass/src/sass/style.scss
+++ b/Demos/Gulp+Sass/src/sass/style.scss
@@ -8,8 +8,15 @@
 @import 'base/print';
 
 /// Components
+@import 'components/buttons';
+@import 'components/slat';
 
 /// Layout
+@import 'layout/header';
+@import 'layout/intro';
+@import 'layout/grid';
+@import 'layout/callout';
+@import 'layout/footer';
 
 /// Pages
 
