--- a/Demos/Session_03/css/base.css
+++ b/Demos/Session_03/css/base.css
@@ -12,7 +12,14 @@ html {
 	color: #222;
 	font-size: 1em;
 	line-height: 1.4;
+	box-sizing: border-box;
 }
+
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 
 /*
  * Remove text-shadow in selection highlight:
