--- a/Demos/Session_02/css/main.css
+++ b/Demos/Session_02/css/main.css
@@ -188,7 +188,7 @@ h6 {
 .grid {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .grid li {
