Added Image gallery functionality to demo 3

--- a/Demos/Gulp+Sass/src/css/style.css
+++ b/Demos/Gulp+Sass/src/css/style.css
@@ -1,3 +1,12 @@
+/* ==========================================================================
+   Colors
+   ========================================================================== */
+/* ==========================================================================
+   Breakpoints
+   ========================================================================== */
+/* ==========================================================================
+   Scale
+   ========================================================================== */
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -723,7 +732,7 @@ h6 {
 .btn:hover,
 .btn:focus {
   color: white;
-  background-color: #cc4141;
+  background-color: #ff5252;
 }
 
 .slat {
