--- a/Demos/Gulp+Sass/src/sass/abstracts/_variables.scss
+++ b/Demos/Gulp+Sass/src/sass/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 /* ==========================================================================
    Colors
    ========================================================================== */
+   $base-accent-color: #ff5252;
+
 
 
    /* ==========================================================================
