--- a/Demos/Session_03/css/main.css
+++ b/Demos/Session_03/css/main.css
@@ -248,6 +248,20 @@ h6 {
 
 
 /* ==========================================================================
+	Carousel
+	========================================================================== */
+
+.main-carousel {
+	margin: 0 0 3em;
+}
+
+.carousel-cell {
+	max-width: none;
+	width: 100%;
+}
+
+
+/* ==========================================================================
 	Media Queries
 	========================================================================== */
 
